# bautt-sigma-up

./: .coverage  .env.example  .gitignore  Makefile  README.md  TREE.txt  atlas_engine_v02.py  delta_integration_contract.py  docker-compose.yml
.github/workflows/: blue-team-defense.yml
.hypothesis/constants/: 0ed3239c2b22b8c9  (+16 more)
legacy/: README.md
scripts/: run_tests.sh  setup_scaffold.sh
services/atlas-api/: README.md  app.py  pyproject.toml  requirements.txt  schemas.py  test_http_contract.py
services/atlas-api/app/: __init__.py  app.py  decorators.py
services/atlas-api/src/atlas_api/: main.py  schemas.py
services/atlas-api/src/atlas_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
services/atlas-api/src/atlas_api/middleware/: __init__.py  rate_limiter.py
services/atlas-api/tests/: test_http_contract.py
services/atlas-api/tests/security/: grok_fuzz_pack.json  test_grok_fuzz_pack.py  test_hypothesis_fuzzing.py  test_rate_limiting.py
services/atlas-engine/: README.md  pyproject.toml
services/atlas-engine/config/: atlas_ruleset_v0.2.json
services/atlas-engine/src/: atlas_engine.py  delta_integration_contract.py
services/atlas-engine/src/atlas_engine/: __init__.py  atlas_engine.py
services/atlas-engine/src/atlas_engine.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
services/atlas-engine/tests/: test_atlas_engine.py
services/atlas-engine/tests/integration/: __init__.py  test_atlas_delta_integration.py
services/atlas-engine/tests/security/: __init__.py  test_fuzz_pack.py  test_hypothesis_fuzzing.py  test_rate_limiting.py
(+24 files in other folders)
