[build-system]
requires=["setuptools>=68","wheel"]
build-backend="setuptools.build_meta"

[project]
name="atlas_api"
version="0.1.0"
requires-python=">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pydantic>=2.8",
    "httpx>=0.27"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
